--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ pycparser==2.22
 Pygments==2.18.0
 pyOpenSSL==24.3.0
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.1
 python-slugify==8.0.4
 pytz==2024.2
