--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ autobahn==24.4.2
 Automat==24.8.1
 binaryornot==0.4.4
 bleach==6.2.0
+boto3==1.36.11
+botocore==1.36.11
 certifi==2024.8.30
 cffi==1.17.1
 channels==4.2.0
@@ -28,6 +30,7 @@ django-crispy-forms==2.3
 django-extensions==3.2.3
 django-filter==24.3
 django-phonenumber-field==8.0.0
+django-storages==1.14.4
 django-tailwind==3.8.0
 django-tinymce==4.1.0
 django-widget-tweaks==1.5.0
@@ -39,6 +42,7 @@ hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 Jinja2==3.1.4
+jmespath==1.0.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -61,6 +65,7 @@ PyYAML==6.0.2
 redis==5.2.0
 requests==2.32.3
 rich==13.9.4
+s3transfer==0.11.2
 service-identity==24.2.0
 setuptools==75.6.0
 six==1.16.0
@@ -75,5 +80,3 @@ urllib3==2.2.3
 webencodings==0.5.1
 whitenoise==6.8.2
 zope.interface==7.2
-
-django-autocomplete-light~=3.11.0
