--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,92 @@
 arrow==1.3.0
 asgiref==3.8.1
 async-timeout==5.0.1
-attrs==24.2.0
+attrs==25.3.0
 autobahn==24.4.2
 Automat==24.8.1
 binaryornot==0.4.4
 bleach==6.2.0
-boto3==1.36.11
-botocore==1.36.11
-certifi==2024.8.30
+boto3==1.37.13
+botocore==1.37.13
+certifi==2025.1.31
 cffi==1.17.1
 channels==4.2.0
 channels_redis==4.2.1
 chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.1.7
+charset-normalizer==3.4.1
+click==8.1.8
 constantly==23.10.4
 cookiecutter==2.6.0
 crispy-bootstrap5==2024.10
-cryptography==44.0.0
+cryptography==44.0.2
 daphne==4.1.2
 dj-database-url==2.3.0
-Django==5.1.3
-django-axes==7.0.0
-django-bootstrap5==24.3
-django-browser-reload==1.17.0
-django-cotton==1.5.1
+Django==5.1.7
+django-axes==7.0.2
+django-bootstrap5==25.1
+django-browser-reload==1.18.0
+django-cotton==2.0.0
 django-crispy-forms==2.3
 django-extensions==3.2.3
-django-filter==24.3
+django-filter==25.1
 django-phonenumber-field==8.0.0
-django-storages==1.14.4
+django-storages==1.14.5
 django-tailwind==3.8.0
 django-tinymce==4.1.0
 django-widget-tweaks==1.5.0
+djangorestframework==3.15.2
+drf-spectacular==0.28.0
 environ==1.0
-factory_boy==3.3.1
-Faker==33.1.0
+factory_boy==3.3.3
+Faker==37.0.0
 gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
-Jinja2==3.1.4
+inflection==0.5.1
+Jinja2==3.1.6
 jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 msgpack==1.1.0
 packaging==24.2
-phonenumbers==8.13.50
-pillow==11.0.0
+phonenumbers==9.0.1
+pillow==11.1.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
-Pygments==2.18.0
-pyOpenSSL==24.3.0
+Pygments==2.19.1
+pyOpenSSL==25.0.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-slugify==8.0.4
-pytz==2024.2
+pytz==2025.1
 PyYAML==6.0.2
-redis==5.2.0
+redis==5.2.1
+referencing==0.36.2
 requests==2.32.3
 rich==13.9.4
-s3transfer==0.11.2
+rpds-py==0.23.1
+s3transfer==0.11.4
 service-identity==24.2.0
-setuptools==75.6.0
-six==1.16.0
-sqlparse==0.5.2
+setuptools==76.0.0
+six==1.17.0
+sqlparse==0.5.3
 tailwindcss==0.0.1
 text-unidecode==1.3
 Twisted==24.11.0
 txaio==23.1.1
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
-urllib3==2.2.3
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
 webencodings==0.5.1
-whitenoise==6.8.2
+whitenoise==6.9.0
 zope.interface==7.2
