--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ django-phonenumber-field==8.0.0
 django-storages==1.14.5
 django-tailwind==3.8.0
 django-tinymce==4.1.0
+django-unfold==0.58.0
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 drf-spectacular==0.28.0
@@ -78,6 +79,7 @@ service-identity==24.2.0
 setuptools==76.0.0
 six==1.17.0
 sqlparse==0.5.3
+stripe==4.2.0b1
 tailwindcss==0.0.1
 text-unidecode==1.3
 Twisted==24.11.0
