--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.9
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
 arrow==1.3.0
 asgiref==3.8.1
 async-timeout==5.0.1
@@ -40,6 +44,7 @@ drf-spectacular==0.28.0
 environ==1.0
 factory_boy==3.3.3
 Faker==37.0.0
+frozenlist==1.6.2
 gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
@@ -54,14 +59,17 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 msgpack==1.1.0
+multidict==6.4.4
 packaging==24.2
 phonenumbers==9.0.1
 pillow==11.1.0
+propcache==0.3.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 Pygments==2.19.1
+PyJWT==2.10.1
 pyOpenSSL==25.0.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
@@ -82,6 +90,7 @@ sqlparse==0.5.3
 stripe==4.2.0b1
 tailwindcss==0.0.1
 text-unidecode==1.3
+twilio==9.6.2
 Twisted==24.11.0
 txaio==23.1.1
 types-python-dateutil==2.9.0.20241206
@@ -91,4 +100,5 @@ uritemplate==4.1.1
 urllib3==2.3.0
 webencodings==0.5.1
 whitenoise==6.9.0
+yarl==1.20.0
 zope.interface==7.2
