--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 drf-spectacular==0.28.0
 environ==1.0
+et_xmlfile==2.0.0
 factory_boy==3.3.3
 Faker==37.0.0
 frozenlist==1.6.2
@@ -60,7 +61,10 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 msgpack==1.1.0
 multidict==6.4.4
+numpy==2.2.6
+openpyxl==3.1.5
 packaging==24.2
+pandas==2.3.0
 phonenumbers==9.0.1
 pillow==11.1.0
 propcache==0.3.1
