--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ cryptography==44.0.2
 daphne==4.1.2
 dj-database-url==2.3.0
 Django==5.1.7
+django-appconf==1.1.0
 django-axes==7.0.2
 django-bootstrap5==25.1
 django-browser-reload==1.18.0
@@ -34,6 +35,7 @@ django-crispy-forms==2.3
 django-extensions==3.2.3
 django-filter==25.1
 django-phonenumber-field==8.0.0
+django-select2==8.4.1
 django-storages==1.14.5
 django-tailwind==3.8.0
 django-tinymce==4.1.0
