--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ django-appconf==1.1.0
 django-axes==7.0.2
 django-bootstrap5==25.1
 django-browser-reload==1.18.0
+django-cors-headers==4.7.0
 django-cotton==2.0.0
 django-crispy-forms==2.3
 django-extensions==3.2.3
