--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.12.9
 aiohttp-retry==2.9.1
 aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
 arrow==1.3.0
 asgiref==3.8.1
 async-timeout==5.0.1
@@ -24,6 +26,7 @@ cookiecutter==2.6.0
 crispy-bootstrap5==2024.10
 cryptography==44.0.2
 daphne==4.1.2
+distro==1.9.0
 dj-database-url==2.3.0
 Django==5.1.7
 django-appconf==1.1.0
@@ -50,11 +53,15 @@ factory_boy==3.3.3
 Faker==37.0.0
 frozenlist==1.6.2
 gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 inflection==0.5.1
 Jinja2==3.1.6
+jiter==0.10.0
 jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -65,6 +72,7 @@ mdurl==0.1.2
 msgpack==1.1.0
 multidict==6.4.4
 numpy==2.2.6
+openai==1.92.3
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.3.0
@@ -75,6 +83,8 @@ psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
 Pygments==2.19.1
 PyJWT==2.10.1
 pyOpenSSL==25.0.0
@@ -93,14 +103,17 @@ s3transfer==0.11.4
 service-identity==24.2.0
 setuptools==76.0.0
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 stripe==4.2.0b1
 tailwindcss==0.0.1
 text-unidecode==1.3
+tqdm==4.67.1
 twilio==9.6.2
 Twisted==24.11.0
 txaio==23.1.1
 types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.1
 typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
