--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ django-cotton==2.0.0
 django-crispy-forms==2.3
 django-extensions==3.2.3
 django-filter==25.1
+django-meta==2.5.0
 django-phonenumber-field==8.0.0
 django-select2==8.4.1
 django-storages==1.14.5
